--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "./src/server.js",
   "license": "MIT",
   "scripts": {
-    "start":"nodemon -r esm ./src/server.js"
+    "start": "nodemon -r esm ./src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
