--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.3",
     "zod": "^3.16.0"
   },
