--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.3",
+    "socket.io": "^4.5.1",
     "zod": "^3.16.0"
   },
   "devDependencies": {
