--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 APP_PORT=4000
 
 SALT_ROUND=10
+
+DB_CONNECTION_STRING = mongodb+srv://tuna:tuni@development.evb9k.mongodb.net/messbook?retryWrites=true&w=majority
