--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "./src/server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon -r esm ./src/server.js"
+    "dev": "nodemon -r esm ./src/server.js",
+    "build": "node -r esm ./src/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
