--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon -r esm ./src/server.js",
-    "build": "node -r esm ./src/server.js"
+    "start": "node -r esm ./src/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
