--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@ PORT=4000
 
 SALT_ROUND=10
 
-DB_CONNECTION_STRING = mongodb+srv://tuna:tuni@development.evb9k.mongodb.net/messbook?retryWrites=true&w=majority
+DB_CONNECTION_STRING = mongodb+srv://tuna:tuni@development.evb9k.mongodb.net/messbook?retryWrites=false&w=majority
+DB_CONNECTION_STRING_LOCAL = mongodb://localhost:27017/messbook
+
+MODE = DEV
