--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^6.3.3",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.1",
     "zod": "^3.16.0"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
