add meal report

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ SALT_ROUND=10
 DB_CONNECTION_STRING = mongodb+srv://tuna:tuni@development.evb9k.mongodb.net/messbook?retryWrites=false&w=majority
 DB_CONNECTION_STRING_LOCAL = mongodb://localhost:27017/messbook
 
-MODE = DEV
+MODE = PROD
