--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "socket.io": "^4.5.1",
     "zod": "^3.16.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+     "nodemon": "^2.0.22"
+  }
 }
